[gd_scene load_steps=2 format=3 uid="uid://b8k3m5n6qaq2r"]

[ext_resource type="Script" uid="uid://cp7un1k5snd1x" path="res://systems/scripts/EntretienEmbauche.gd" id="1"]

[node name="EntretienEmbauche" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.12, 1)

[node name="DialoguePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 122.0
offset_top = -285.0
offset_right = 581.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="DirecteurName" type="Label" parent="DialoguePanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Chef Directeur"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="DialoguePanel/VBox"]
layout_mode = 2

[node name="DialogueText" type="Label" parent="DialoguePanel/VBox"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Question..."
vertical_alignment = 1
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="DialoguePanel/VBox"]
layout_mode = 2

[node name="ChoicesContainer" type="VBoxContainer" parent="DialoguePanel/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
